fixed white space

--- a/unit11/scss/_large.scss
+++ b/unit11/scss/_large.scss
@@ -1,5 +1,50 @@
-@media only screen and(min-width:35rem) {
+@media only screen and(min-width: 65rem) {
     body {
-        color: pink;
+        color: yellow;
+    }
+    div#pageWrapper {
+        grid-template-areas:
+            "header"
+            "navigation"
+            "content"
+            "footer";
+        grid-template-columns: 1fr;
+        // max-width: 64rem;
+        margin: auto;
+        overflow: hidden;
+    }
+
+    nav#links {
+        background-color: aqua;
+        width: 100%;
+        height: auto;
+        ul {
+            display: flex;
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            border-left: 1px solid rgba(0, 0, 0);
+            li {
+                border-right: 1px solid rgba(0, 0, 0);
+
+                a {
+                    color: black;
+                    display: block;
+                    padding: 0.75rem 2vw;
+                    font-size: 1.1rem;
+                }
+                a:hover {
+                    background-color: grey;
+                    transition: ease-in-out 0.2s;
+                }
+                .active a {
+                    background-color: white;
+                    color: black;
+                }
+            }
+        }
+    }
+    main {
+        height: 100vh;
     }
 } //end media query
